refactor(sonar): fix SonarCloud code smells, warnings and packaging mismatch issues